src/objects/Case_Lines__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Introduction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>LOW VOLTAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH VOLTAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONGENITAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISSUE VALVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICAL VALVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP DIAGNOSTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP THERAPEUTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE - DISPOSABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVX-ARRAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RECORDING SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM - SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE - SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIGUIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCT CATHETERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRESSURE WIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VASCULAR PLUGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTIVE CLOSURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMP ASSIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEART FAILURE MGMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARDIOMEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(CRM) MPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(SH) Trifecta GT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Case_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-manufactured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case line Item</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <recordTypes>
        <fullName>Capital</fullName>
        <active>true</active>
        <label>Capital</label>
    </recordTypes>
    <recordTypes>
        <fullName>Capital_Alternative_Program</fullName>
        <active>true</active>
        <label>Capital Alternative Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implants_Disposables</fullName>
        <active>true</active>
        <label>Implants &amp; Disposables</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>